<resources>
    <string name="app_name">Top Universitetlar</string>
    <string name="massachusetts">Massachusetts Institute of Technology</string>
    <string name="stanford">Stanford University</string>
    <string name="california">California Institute of Technology (Caltech)</string>
    <string name="oxford">University of Oxford</string>
    <string name="eth">ETH Zurich (Swiss Federal Institute of Technology)</string>
    <string name="cambridge">Cambridge University</string>
    <string name="harvard">Harvard University</string>
    <string name="imperial">Imperial College London</string>
    <string name="chicago">University of Chicago</string>
    <string name="ucl">UCL(University college London)</string>
    <string name="massachusettsInfo"><![CDATA[Massachusetts texnologiya instituti ( MIT , Massachusets texnologiya instituti, MIT ) — AQShning Massachusets shtati , Kembrijda ( Boston shahri chekkasida ) joylashgan universitet va tadqiqot markazi . Massachusets texnologiya instituti va Massachusets texnologiya instituti sifatida ham tanilgan . AQSh va dunyodagi eng nufuzli texnik ta\'lim muassasalaridan biri . MIT nufuzli jahon universitetlari reytingida yetakchi hisoblanadi, robototexnika va sunʼiy intellekt sohalarida innovator va uning taʼlim muhandislik dasturlari, axborot texnologiyalari, iqtisod, fizika, kimyo va matematika boʻyicha dasturlari. Milliy universitetlar reytingi tizimi bilan tanilgan US News & World Report , yildan-yilga ular mamlakatdagi eng yaxshi deb tan olinadi . Institut shuningdek, menejment , iqtisod , tilshunoslik , siyosatshunoslik kabi boshqa ko\'plab sohalarda ham mashhur., falsafa va musiqa. Harbiy tadqiqotlar uchun yillik harbiy buyurtmalar bo\'yicha MIT dunyodagi eng yirik ilmiy-tadqiqot va ishlanmalar tuzilmasi (bo\'linmagandan tijorat korporatsiyalarigacha ) (2014 yilda institut byudjetidan harbiy tadqiqotlar va ishlanmalar uchun xarajatlar 951 million dollarni tashkil etgan). Korporativ segmentda faqat Lockheed Martin , Northrop Grumman , Raytheon , Boeing kabi gigantlar u bilan raqobatlashadi, ularning yillik ilmiy-tadqiqot xarajatlari milliard dollardan oshadi . MITning eng mashhur bo\'linmalari orasida Linkoln laboratoriyasi ( AQSh Harbiy-havo kuchlari balansidagi hukumat muassasasi , radardan tortib qit\'alararo raketalargacha keng ko\'lamli harbiy amaliy tadqiqotlar uchun mas\'uldir ), laboratoriya. kompyuter fanlari va sun\'iy intellekt , shuningdek, menejment maktabi. MIT hamjamiyatining 81 a\'zosi Nobel mukofoti sovrindorlari bo\'lib, rekord ko\'rsatkichdir. 1861 yilda Massachusets Hamdo\'stligi Uilyam Burton Rojers tomonidan Massachusets texnologiya instituti va Boston tabiiy tarix jamiyatini tashkil etish to\'g\'risidagi nizomni tasdiqladi. Uilyam Burton Rojers 19-asrning o\'rtalarida jadal rivojlanayotgan ilm-fan muammolariga javob beradigan yangi oliy ta\'lim shaklini yaratmoqchi edi .klassik ta\'lim endi adekvat javob bera olmadi. Nizom qabul qilingandan so\'ng, Rojers mablag\' izlay boshladi, o\'quv dasturini ishlab chiqdi va institut uchun mos joy tanlashni boshladi. Rojersning rejasi, hozir ma\'lum bo\'lganidek, uchta tamoyilga asoslanadi: foydali bilimlarning tarbiyaviy ahamiyati, harakat orqali o\'rganish zarurati va kasbiy va gumanitar fanlarning integratsiyasi. Uning falsafasi o\'rganish faqat amaliyotda qo\'llanilishi mumkin bo\'lgan fanning manipulyatsiyalari va eng muhim tafsilotlarida emas, balki barcha asosiy ilmiy tamoyillarni tushuntirishlari bilan bilish va tushunishda. Bir necha oy o\'tgach boshlangan fuqarolar urushi tufayli MITdagi birinchi darslar 1865 yilgacha Boston chekkasidagi savdo uyida ijaraga olingan joyda o\'tkazildi .]]></string>
    <string name="stenfordInfo">Stenford 1885 yilda Leland va Jeyn Stenford tomonidan o\'tgan yili 15 yoshida tifdan vafot etgan yagona farzandi, kichik Leland Stenford xotirasiga asos solingan. Leland Stenford AQSH senatori va Kaliforniyaning sobiq gubernatori boʻlib , temir yoʻl magnati sifatida boylik orttirgan . Maktab o\'zining birinchi talabalarini 1891 yil 1 oktyabrda qo\'shma ta\'lim va diniy bo\'lmagan muassasa sifatida qabul qildi . Stenford universiteti 1893 yilda Leland Stenford o\'limidan so\'ng va yana kampusning katta qismi vayron bo\'lganidan keyin moliyaviy qiyinchiliklarga duch keldi.1906 yil San-Fransiskodagi zilzila . Ikkinchi jahon urushidan soʻng provost Frederik Terman keyinchalik Silikon vodiysi deb nomlanuvchi hududda oʻzini oʻzi taʼminlaydigan mahalliy sanoatni qurish uchun professor-oʻqituvchilar va bitiruvchilarning tadbirkorligini qoʻllab-quvvatladi . Universitet bitta kampusda yettita maktab atrofida tashkil etilgan: bakalavriat darajasidagi 40 ta akademik bo\'limdan iborat uchta maktab, shuningdek, huquq, tibbiyot, ta\'lim va biznes sohalarida magistratura dasturlariga qaratilgan to\'rtta kasbiy maktab. Universitetda, shuningdek, davlat siyosati tahlil markazi, Guver instituti joylashgan . Talabalar 36 ta universitet sportida raqobatlashadilar va universitet I FBS Pac-12 konferensiyasidagi ikkita xususiy muassasalardan biri hisoblanadi . 2022-yil 26-may holatiga koʻra, Stenford 131 ta NCAA jamoasi chempionligini boshqa universitetlarga qaraganda koʻproq qoʻlga kiritdi va 1994–1995-yillardan boshlab ketma-ket 25 yil davomida NACDA direktorlari kubogi bilan taqdirlandi. Bundan tashqari, 2021 yilga kelib, Stenford talabalari va bitiruvchilari kamida 296 ta Olimpiada medalini, shu jumladan 150 ta oltin va 79 ta kumush medalni qoʻlga kiritishgan . 2021-yil aprel holatiga ko‘ra, 85 ta Nobel mukofoti sovrindori , 29 nafar Turing mukofoti sovrindori va sakkizta Fields medali sohibi Stenfordda talabalar, bitiruvchilar, professor-o‘qituvchilar yoki xodimlar sifatida hamkorlik qilgan. Bundan tashqari, Stenford oʻzining tadbirkorligi bilan alohida eʼtirof etilgan va startaplar uchun mablagʻ jalb qilish boʻyicha eng muvaffaqiyatli universitetlardan biri hisoblanadi . Stenford bitiruvchilari koʻplab kompaniyalarga asos solgan boʻlib, ular birlashgan holda yillik daromadi 2,7 trillion dollardan oshadi va 2011 yil holatiga koʻra 5.4 million ish oʻrni yaratgan, bu taxminan yettinchi yirik iqtisodiyotga teng. dunyo (2020 yil holatiga ko\'ra). Stenford AQSh prezidenti Gerbert Guverning , 74 tirik milliarder va 17 astronavtning o\'qish joyidir. Akademiyada uning bitiruvchilari orasida Yel va MITning hozirgi prezidentlari hamda Garvard va Prinston provostlari bor. Shuningdek, u Fulbrayt olimlari , Marshall olimlari , Rodos olimlari va Amerika Qo\'shma Shtatlari Kongressi a\'zolarining etakchi ishlab chiqaruvchilardan biridir .</string>
    <string name="harvardInfo">Garvard universiteti Massachusets shtatining Kembrij shahridagi xususiy Ayvi ligasi tadqiqot universitetidir . 1636-yilda Garvard kolleji sifatida asos solingan va uning birinchi xayrixohi, puritan ruhoniysi Jon Garvard nomi bilan atalgan , u Qo\'shma Shtatlardagi eng qadimgi oliy o\'quv yurti va dunyodagi eng nufuzli va yuqori baholangan muassasalardan biridir. Universitet o\'nta akademik fakultetdan va Garvard Radklif institutidan iborat . San\'at va fanlar bakalavriat va magistratura ilmiy yo\'nalishlarining keng doirasi bo\'yicha o\'qishni taklif qiladi va boshqa fakultetlar faqat magistr darajalarini, shu jumladan professional darajalarni taklif qiladi. Garvardda uchta asosiy kampus mavjud: 209 akr (85 ga) Kembrij kampusi markazi Garvard Yardda joylashgan darhol Boston Allston mahallada Charlz daryosi bo\'ylab qo\'shni kampus va Bostonning Longvud tibbiyot hududidagi tibbiyot kampusi . Garvard fondi 50,9 milliard dollarga baholanib, uni dunyodagi eng boy akademik muassasaga aylantiradi. Endowment daromadi bakalavriat kollejiga moliyaviy ehtiyojdan qat\'iy nazar talabalarni qabul qilish va kreditlarsiz saxiy moliyaviy yordam ko\'rsatish imkonini beradi. Garvard kutubxonasi dunyodagi eng yirik akademik kutubxona tizimi boʻlib, 79 ta alohida kutubxonadan iborat boʻlib, unda 20,4 millionga yaqin kitob mavjud. Garvardning asos solishi Massachusets mustamlaka qonun chiqaruvchi organi tomonidan ruxsat etilgan , hozirgi vazirlarimiz tuproqda yotib, savodsiz xizmatni cherkovlarga qoldirishdan qo\'rqib , Garvard kolleji o\'zining dastlabki yillarida hech qachon rasmiy ravishda biron bir konfessiya bilan bog\'lanmagan bo\'lsa-da, birinchi navbatda jamoat ruhoniylarini tayyorlagan. Uning o\'quv rejasi va talabalar tarkibi 18-asrda asta-sekin dunyoviylashtirildi. 19-asrga kelib Garvard Boston elitasi orasida eng ko\'zga ko\'ringan ilmiy va madaniy muassasa sifatida paydo bo\'ldi . Amerika fuqarolar urushidan soʻng , Prezident Charlz Uilyam Eliot davrida1869-1909 yillar davomida kollejda bir nechta sho\'\'ba kasb-hunar maktablari ishlab chiqilgan bo\'lib, ular kollejni zamonaviy tadqiqot universitetiga aylantirgan . 1900 yilda Garvard Amerika universitetlari assotsiatsiyasiga asos solgan . Jeyms B. Konant Buyuk Depressiya va Ikkinchi Jahon urushi davrida universitetni boshqargan va urushdan keyin qabul qilishni liberallashgan.</string>
    <string name="californiaInfo">Kaliforniya Texnologiya Instituti ( markali Caltech ) Kaliforniyaning Pasadena shahridagi xususiy tadqiqot universitetidir . Universitet fan va muhandislik sohasidagi kuchliligi bilan mashhur va Qo\'shma Shtatlardagi texnologiya institutlarining kichik guruhidan biri bo\'lib, asosan sof va amaliy fanlarni o\'qitishga bag\'ishlangan. Caltech dunyodagi eng yaxshi ilmiy muassasalar qatoriga kiradi va AQShda eng tanlanganlardan biri hisoblanadi. Muassasa 1891 yilda Amos G. Throop tomonidan tayyorgarlik va kasb-hunar maktabi sifatida tashkil etilgan va 20-asr boshlarida Jorj Elleri Xeyl , Artur Amos Noyes va Robert Endryu Millikan kabi nufuzli olimlarni jalb qila boshlagan . Kasb-hunar va tayyorgarlik maktablari 1910 yilda tarqatib yuborildi va 1920 yilda kollej o\'zining hozirgi nomini oldi. 1934 yilda Kaltek Amerika Universitetlari Assotsiatsiyasiga saylandi va NASAning Jet Propulsion Laboratoriyasining oldingi avlodlari bo\'ldi . boshqarish va boshqarish, 1936-1943 yillarda Teodor fon Karman boshchiligida tashkil etilgan . Caltech 2011 yilda homiylik ostidagi tadqiqotlarda 332 million dollarni boshqaradigan fan va muhandislikka katta e\'tibor qaratadigan oltita akademik bo\'limga ega. Uning 124 akr (50 ga) asosiy kampusi Los-Anjeles markazidan taxminan 11 mil (18 km) shimoli-sharqda joylashgan . Birinchi kurs talabalari kampusda yashashlari shart va bakalavrlarning 95% Caltechdagi kampusdagi uy tizimida qoladilar . Caltechda amaliy hazillar va hazillarning kuchli an\'analari mavjud bo\'lsa-da, talabalik hayoti fakultetga uyga olib boriladigan imtihonlarni tayinlash imkonini beruvchi sharaf kodeksi bilan boshqariladi . Caltech Beavers NCAA III divizionida 13 ta kollejlararo sport turlari bo\'yicha raqobatlashadi .Janubiy Kaliforniya kollejlararo atletik konferentsiya (SCIAC). Universitetdagi yoki universitetdagi olimlar va muhandislar ko\'plab zamonaviy ilmiy yutuqlar va innovatsiyalarda, jumladan barqarorlik fani , kvant fizikasi , zilzila monitoringi , oqsil muhandisligi va yumshoq robototexnika sohasidagi yutuqlarda muhim rol o\'ynadi .</string>
</resources>