<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:background="@drawable/elev"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:paddingHorizontal="16dp"
            android:layout_gravity="start|center"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/infoBtn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="end|center"
            android:background="@drawable/infobtn"/>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/massachusetts"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:padding="16dp"
                    android:shadowColor="@color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/massachusetts"
                    android:background="#50000000"
                    android:textColor="@color/white"/>

                <FrameLayout
                    android:id="@+id/massachusetts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"/>

            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/stanford"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:padding="16dp"
                    android:shadowColor="@color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/stanford"
                    android:background="#50000000"
                    android:textColor="@color/white"/>

                <FrameLayout
                    android:id="@+id/stanford"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"/>

            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/harvard"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:padding="16dp"
                    android:shadowColor="@color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/harvard"
                    android:background="#50000000"
                    android:textColor="@color/white"/>

                <FrameLayout
                    android:id="@+id/harvard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"/>

            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/california"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:padding="16dp"
                    android:shadowColor="@color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/california"
                    android:background="#50000000"
                    android:textColor="@color/white"/>

                <FrameLayout
                    android:id="@+id/california"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"/>

            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/oxford"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:padding="16dp"
                    android:shadowColor="@color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/oxford"
                    android:background="#50000000"
                    android:textColor="@color/white"/>

                <FrameLayout
                    android:id="@+id/oxford"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"/>

            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/eth"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:padding="16dp"
                    android:shadowColor="@color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/eth"
                    android:background="#50000000"
                    android:textColor="@color/white"/>

                <FrameLayout
                    android:id="@+id/eth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"/>

            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cambridge"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:padding="16dp"
                    android:shadowColor="@color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/cambridge"
                    android:background="#50000000"
                    android:textColor="@color/white"/>

                <FrameLayout
                    android:id="@+id/cambridge"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"/>

            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/imperial"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:padding="16dp"
                    android:shadowColor="@color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/imperial"
                    android:background="#50000000"
                    android:textColor="@color/white"/>

                <FrameLayout
                    android:id="@+id/imperial"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"/>

            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/chicago"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:padding="16dp"
                    android:shadowColor="@color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/chicago"
                    android:background="#50000000"
                    android:textColor="@color/white"/>

                <FrameLayout
                    android:id="@+id/chicago"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"/>

            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ucl"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:padding="16dp"
                    android:shadowColor="@color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/ucl"
                    android:background="#50000000"
                    android:textColor="@color/white"/>

                <FrameLayout
                    android:id="@+id/ucl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"/>

            </FrameLayout>








        </LinearLayout>

    </ScrollView>


</LinearLayout>